# DEALR---Team-JAMA

./: .dockerignore  .gitignore  CLAUDE.md  README.md  alembic.ini  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.claude/: settings.local.json
alembic/: env.py
app/: main.py
app/core/: config.py  errors.py  logging.py
app/db/: base.py  session.py
app/services/: jobs.py  ledger.py
app/squad/: client.py  errors.py  webhooks.py
docs/: ARCHITECTURE.md
frontend/: package-lock.json  package.json
frontend/src/: dealr-app.tsx  main.tsx  newDealr-app.tsx
tests/: conftest.py  test_health.py
tests/unit/: test_job_fsm.py  test_ledger.py  test_squad_client.py  test_squad_errors.py  test_squad_refs.py  test_squad_webhooks.py
