[project]
name = "dealr-backend"
version = "0.1.0"
description = "DEALR — AI-powered economic platform for Nigeria's informal workforce. Backend service for Squad Hackathon 3.0, Challenge 2."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [
    { name = "JAMA Team — DEALR" },
]

dependencies = [
    # Web framework
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.32,<0.33",   # includes uvloop + httptools
    "python-multipart>=0.0.12",         # form / file upload parsing

    # Database
    "sqlalchemy[asyncio]>=2.0,<2.1",
    "asyncpg>=0.30,<0.31",
    "alembic>=1.13,<1.14",
    "pgvector>=0.3,<0.4",

    # Models, settings, validation
    "pydantic>=2.9,<3.0",
    "pydantic-settings>=2.6,<3.0",
    "email-validator>=2.2",             # for EmailStr

    # Cache / queue
    "redis>=5.0,<6.0",
    "celery[redis]>=5.4,<5.5",

    # HTTP
    "httpx[http2]>=0.27,<0.28",         # the ONLY HTTP client we use
    "tenacity>=9.0,<10.0",              # retries

    # Logging
    "structlog>=24.4,<25.0",

    # Auth / crypto
    "pyjwt[crypto]>=2.9",
    "passlib[bcrypt]>=1.7",
    "python-ulid>=3.0",                 # for unique transfer refs

    # AI providers
    "anthropic>=0.40",
    "google-genai>=0.3",
    "voyageai>=0.3",
    "deepgram-sdk>=4.0",

    # Misc
    "orjson>=3.10",                     # faster JSON
    "slowapi>=0.1.9",                   # rate limiting
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "httpx>=0.27",                      # ASGI testing
    "ruff>=0.7,<0.8",
    "mypy>=1.13,<2.0",
    "types-redis>=4.6",
    "anyio>=4.6",                       # async test backend
    "freezegun>=1.5",                   # deterministic time in tests
    "respx>=0.21",                      # httpx mocking
]

# ── Tooling ──────────────────────────────────────────────────────────────────

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
# E,W      = pycodestyle
# F        = pyflakes
# I        = isort
# B        = bugbear
# UP       = pyupgrade
# SIM      = simplifier
# RUF      = ruff-specific
# ASYNC    = catch sync-in-async traps
# S        = bandit security
# N        = pep8 naming
select = ["E", "W", "F", "I", "B", "UP", "SIM", "RUF", "ASYNC", "N"]
ignore = [
    "E501",        # line length — formatter handles it
    "B008",        # FastAPI: Depends() in args is the pattern
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "N802"]      # asserts + camelCase in test names ok
"alembic/**/*.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
disallow_untyped_defs = true
disallow_any_unimported = true
warn_return_any = true
warn_unused_ignores = true
no_implicit_optional = true
check_untyped_defs = true

[[tool.mypy.overrides]]
# AI SDKs ship loose types; allow but isolate
module = ["voyageai.*", "deepgram.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"
markers = [
    "integration: integration tests (DB + Redis)",
    "squad: hits Squad sandbox (excluded from default CI)",
]

[tool.coverage.run]
branch = true
source = ["app"]
omit = ["app/main.py", "alembic/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
fail_under = 75
show_missing = true

# ── uv ───────────────────────────────────────────────────────────────────────

[tool.uv]
package = false      # this is an app, not a library